css/style.css
body {
  color: #272f3d;
  font-family: Arial, Helvetica, sans-serif;
  margin:auto;
  width: 90%;
}

header {
  background-color: #ecddce;
  color: gray;
}

main {
  background-color: #b4b28c;
  min-height: 600px;
}

legend {
  font-size: 1.3em;
  font-family: 'Nothing You Could Do', cursive;
  font-weight: bold;
  padding-bottom: 20px;
}

footer {
  background-color: #ecddce;
  height: 100px;
  line-height: 100px;
  text-align: center;
}

footer p {
  display: inline-block;
}

a {
  text-decoration: none;
  color: #7a8aa8;
}

a:hover {
  color: #ecddce;
}

#logo {
  padding: 20px;
  text-align: center;
}

#avatar {
  float: left;
  padding: 30px;
  text-align: center;
}

#quote {
  font-size: 1.4em;
  padding-bottom: 30px;
  text-align: center;
}

#dailies {
  background-color: #b9abaa;
  box-shadow: 5px 10px 5px #272f3d;
  float:left;
  margin-left: 20px;
  margin-top: 20px;
  padding: 20px;
  width: 43%;
}

#dailies label {
  display: inline-block; 
  padding-top: 10px;
  width: 90%;
}

#dailies input {
  float:left;
  margin-right: 10px;
}

#todos {
  background-color: #b9abaa;
  box-shadow: 5px 10px 5px #272f3d; 
  float:right;
  margin-right: 20px;
  margin-top: 20px;
  padding: 20px;
  width: 43%;
}

#todos input {
  float:left;
  margin-right: 10px;
}

#todos label {
  display: inline-block; 
  padding-top: 10px;
}

.clear {
  clear:both;
}

.modal {
  display: none;
  position: fixed; 
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%; 
  height: 100%; 
  overflow: auto; 
}

.modal-content {
  background-color: #fefefe;
  opacity: .9;
  box-shadow: 5px 10px 5px #272f3d;
  margin: 20% auto;
  padding: 20px;
  border: 2px solid #888;
  width: 80%;
}

.modal-content label {
  display: block;
  font-family: 'Nothing You Could Do', cursive; 
  font-size: 1.2em;
  padding-bottom: 10px;
  padding-top: 20px;
}

.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

